Athena_Widget/Package/Xm/xmxm.pas


procedure XmStringDrawUnderline(d:PDisplay; w:TWindow; fntlst:TXmFontList; str:TXmString; gc:TGC; 
            x:LongInt; y:LongInt; width:LongInt; align:dword; lay_dir:dword; 
            x2:TPosition; y2:TPosition; width2:TDimension; align2:byte; lay_dir2:byte; 
            clip:PXRectangle; under:TXmString);cdecl;external libXm;
function XmCvtXmStringToByteStream(_string:TXmString; prop_return:PPbyte):dword;cdecl;external libXm;
function XmCvtByteStreamToXmString(_property:Pbyte):TXmString;cdecl;external libXm;
function XmStringByteStreamLength(_string:Pbyte):dword;cdecl;external libXm;
function XmStringPeekNextTriple(context:TXmStringContext):TXmStringComponentType;cdecl;external libXm;
function XmStringGetNextTriple(context:TXmStringContext; length:Pdword; value:PXtPointer):TXmStringComponentType;cdecl;external libXm;
function XmStringComponentCreate(tag:TXmStringComponentType; length:dword; value:TXtPointer):TXmString;cdecl;external libXm;
function XmStringUnparse(_string:TXmString; tag:TXmStringTag; tag_type:TXmTextType; output_type:TXmTextType; parse_table:TXmParseTable; 
           parse_count:TCardinal; parse_model:TXmParseModel):TXtPointer;cdecl;external libXm;
function XmStringParseText(text:TXtPointer; text_end:PXtPointer; tag:TXmStringTag; _type:TXmTextType; parse_table:TXmParseTable; 
           parse_count:TCardinal; call_data:TXtPointer):TXmString;cdecl;external libXm;
function XmStringToXmStringTable(_string:TXmString; break_comp:TXmString; table:PXmStringTable):TCardinal;cdecl;external libXm;
function XmStringTableToXmString(table:TXmStringTable; count:TCardinal; break_component:TXmString):TXmString;cdecl;external libXm;
function XmStringTableUnparse(table:TXmStringTable; count:TCardinal; tag:TXmStringTag; tag_type:TXmTextType; output_type:TXmTextType; 
           parse:TXmParseTable; parse_count:TCardinal; parse_model:TXmParseModel):PXtPointer;cdecl;external libXm;
function XmStringTableParseStringArray(strings:PXtPointer; count:TCardinal; tag:TXmStringTag; _type:TXmTextType; parse:TXmParseTable; 
           parse_count:TCardinal; call_data:TXtPointer):TXmStringTable;cdecl;external libXm;
function XmDirectionToStringDirection(dir:TXmDirection):TXmStringDirection;cdecl;external libXm;
function XmStringDirectionToDirection(dir:TXmStringDirection):TXmDirection;cdecl;external libXm;
function XmStringGenerate(text:TXtPointer; tag:TXmStringTag; _type:TXmTextType; rendition:TXmStringTag):TXmString;cdecl;external libXm;
function XmStringPutRendition(_string:TXmString; rendition:TXmStringTag):TXmString;cdecl;external libXm;
function XmParseMappingCreate(arg_list:TArgList; arg_count:TCardinal):TXmParseMapping;cdecl;external libXm;
procedure XmParseMappingSetValues(parse_mapping:TXmParseMapping; arg_list:TArgList; arg_count:TCardinal);cdecl;external libXm;
procedure XmParseMappingGetValues(parse_mapping:TXmParseMapping; arg_list:TArgList; arg_count:TCardinal);cdecl;external libXm;
procedure XmParseMappingFree(parse_mapping:TXmParseMapping);cdecl;external libXm;
procedure XmParseTableFree(parse_table:TXmParseTable; parse_count:TCardinal);cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for XmTabList.c    ******* }
function XmStringTableProposeTablist(strings:TXmStringTable; num_strings:TCardinal; widget:TWidget; pad_value:single; offset_model:TXmOffsetModel):TXmTabList;cdecl;external libXm;
procedure XmTabSetValue(xmtab:TXmTab; value:single);cdecl;external libXm;
function XmTabGetValues(xmtab:TXmTab; units:Pbyte; offset:PXmOffsetModel; alignment:Pbyte; decimal:PPchar):single;cdecl;external libXm;
procedure XmTabFree(xmtab:TXmTab);cdecl;external libXm;
function XmTabCreate(value:single; units:byte; offset_model:TXmOffsetModel; alignment:byte; decimal:Pchar):TXmTab;cdecl;external libXm;
function XmTabListRemoveTabs(oldlist:TXmTabList; position_list:PCardinal; position_count:TCardinal):TXmTabList;cdecl;external libXm;
function XmTabListReplacePositions(oldlist:TXmTabList; position_list:PCardinal; tabs:PXmTab; tab_count:TCardinal):TXmTabList;cdecl;external libXm;
function XmTabListGetTab(tablist:TXmTabList; position:TCardinal):TXmTab;cdecl;external libXm;
function XmTabListTabCount(tablist:TXmTabList):TCardinal;cdecl;external libXm;
function XmTabListCopy(tablist:TXmTabList; offset:LongInt; count:TCardinal):TXmTabList;cdecl;external libXm;
procedure XmTabListFree(tablist:TXmTabList);cdecl;external libXm;
function XmTabListInsertTabs(oldlist:TXmTabList; tabs:PXmTab; tab_count:TCardinal; position:LongInt):TXmTabList;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for XmRenderTable.c    ******* }
function XmRenderTableCvtFromProp(para1:TWidget; prop:Pchar; len:dword):TXmRenderTable;cdecl;external libXm;
function XmRenderTableCvtToProp(para1:TWidget; table:TXmRenderTable; prop_return:PPchar):dword;cdecl;external libXm;
procedure XmRenditionUpdate(rendition:TXmRendition; arglist:TArgList; argcount:TCardinal);cdecl;external libXm;
procedure XmRenditionRetrieve(rendition:TXmRendition; arglist:TArgList; argcount:TCardinal);cdecl;external libXm;
procedure XmRenditionFree(rendition:TXmRendition);cdecl;external libXm;
function XmRenditionCreate(widget:TWidget; tag:TXmStringTag; arglist:TArgList; argcount:TCardinal):TXmRendition;cdecl;external libXm;
function XmRenderTableGetRenditions(table:TXmRenderTable; tags:PXmStringTag; tag_count:TCardinal):PXmRendition;cdecl;external libXm;
function XmRenderTableGetRendition(table:TXmRenderTable; tag:TXmStringTag):TXmRendition;cdecl;external libXm;
function XmRenderTableGetTags(table:TXmRenderTable; tag_list:PPXmStringTag):LongInt;cdecl;external libXm;
procedure XmRenderTableFree(table:TXmRenderTable);cdecl;external libXm;
function XmRenderTableCopy(table:TXmRenderTable; tags:PXmStringTag; tag_count:LongInt):TXmRenderTable;cdecl;external libXm;
function XmRenderTableRemoveRenditions(oldtable:TXmRenderTable; tags:PXmStringTag; tag_count:LongInt):TXmRenderTable;cdecl;external libXm;
function XmRenderTableAddRenditions(oldtable:TXmRenderTable; renditions:PXmRendition; rendition_count:TCardinal; merge_mode:TXmMergeMode):TXmRenderTable;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Dest.c    ******* }
function XmGetDestination(display:PDisplay):TWidget;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Traversal.c    ******* }
function XmIsTraversable(wid:TWidget):TBoolean;cdecl;external libXm;
function XmGetVisibility(wid:TWidget):TXmVisibility;cdecl;external libXm;
function XmGetTabGroup(wid:TWidget):TWidget;cdecl;external libXm;
function XmGetFocusWidget(wid:TWidget):TWidget;cdecl;external libXm;
function XmProcessTraversal(w:TWidget; dir:TXmTraversalDirection):TBoolean;cdecl;external libXm;
procedure XmAddTabGroup(tabGroup:TWidget);cdecl;external libXm;
procedure XmRemoveTabGroup(w:TWidget);cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******        ******* }
{
 * The following includes are for source compatibility.  They might be
 *    removed at some future time.
  }
const
  XmINDICATOR_3D_BOX = $01;  
  XmINDICATOR_FLAT_BOX = $02;  
  XmINDICATOR_CHECK_GLYPH = $10;  
  XmINDICATOR_CROSS_GLYPH = $20;  
{ Treated as _BOX or _CHECK_BOX  }
{ Treated as XmINDICATOR_3D_BOX  }

Const
    XmINDICATOR_NONE = 0;
    XmINDICATOR_FILL = 1;
    XmINDICATOR_BOX = 255;
    XmINDICATOR_CHECK = XmINDICATOR_CHECK_GLYPH;
    XmINDICATOR_CHECK_BOX = XmINDICATOR_CHECK_GLYPH+XmINDICATOR_3D_BOX;
    XmINDICATOR_CROSS = XmINDICATOR_CROSS_GLYPH;
    XmINDICATOR_CROSS_BOX = XmINDICATOR_CROSS_GLYPH+XmINDICATOR_3D_BOX;

  Const
    XmUNSET = 0;
    XmSET = 1;
    XmINDETERMINATE = 2;

  Const
    XmTOGGLE_BOOLEAN = 0;
    XmTOGGLE_INDETERMINATE = 1;

type
  PXmToggleButtonState = ^TXmToggleButtonState;
  TXmToggleButtonState = byte;
{ Shared text enum.  }

  PXmTextStatus = ^TXmTextStatus;
  TXmTextStatus =  LongInt;
  Const
    EditDone = 0;
    EditError = 1;
    EditReject = 2;

{ XmDisplay.XmNdefaultButtonEmphasis enum  }
  Const
    XmEXTERNAL_HIGHLIGHT = 0;
    XmINTERNAL_HIGHLIGHT = 1;

{ new for XmString  }
  _MOTIF_DEFAULT_LOCALE = '_MOTIF_DEFAULT_LOCALE';  
  Const
    XmPATH_MODE_FULL = 0;
    XmPATH_MODE_RELATIVE = 1;

  Const
    XmFILTER_NONE = 0;
    XmFILTER_HIDDEN_FILES = 1;
{ _Xm_h  }
{ DON'T ADD STUFF AFTER THIS #endif  }

implementation

{ was #define dname def_expr }
function XmSTRING_COMPONENT_END : TXmStringComponentType;
  begin
    XmSTRING_COMPONENT_END:=TXmStringComponentType(126);
  end;

{ was #define dname def_expr }
function XmSTRING_COMPONENT_USER_BEGIN : TXmStringComponentType;
  begin
    XmSTRING_COMPONENT_USER_BEGIN:=TXmStringComponentType(128);
  end;

{ was #define dname def_expr }
function XmSTRING_COMPONENT_USER_END : TXmStringComponentType;
  begin
    XmSTRING_COMPONENT_USER_END:=TXmStringComponentType(255);
  end;

{ was #define dname def_expr }
//function XmUNSPECIFIED_PIXEL : TPixel;
//  begin
//    XmUNSPECIFIED_PIXEL:=TPixel( not (0));
//  end;

{ was #define dname def_expr }
//function XmFMT_8_BIT : TXmTextFormat;
//  begin
//    XmFMT_8_BIT:=TXmTextFormat(XA_STRING);
//  end;
//
//{ was #define dname def_expr }
//function XmFMT_16_BIT : TXmTextFormat;
//  begin
//    XmFMT_16_BIT:=TXmTextFormat(2);
//  end;


end.
